
package mysql;

message tb_arena_record{
    required uint32 role_id = 1;
    required uint32 status = 2;
    required bytes log = 3;
}
