
package mysql;

message tb_family_domain{
    required uint32 scene_id = 1;
    required uint32 family_id = 2;
    required uint32 time = 3;
}
