
package mysql;

message tb_role_farm{
    required uint32 role_id = 1;
    required bytes farm = 2;
}
