
package mysql;

message tb_role_friends{
    required uint32 role_id = 1;
    required bytes friends = 2;
}
